2005-12-15  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single: (impl_import):

	Fix a compile warning.
	
2005-12-14  Christian Persch  <chpe@cvs.gnome.org>

	* plugins/desktop-file/Makefile.am:
	A plugins/desktop-file/plugin.symbols:

	Only export necessary symbols.

2005-12-14  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:

	Install the fonts schemas file too.

2005-12-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-12-12  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.3.1 ===

	* NEWS:
	* configure.ac:

2005-12-12  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:

	Fix desktop file install.

2005-12-11  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-12-11  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.3 ===

	* NEWS:
	* configure.ac:

2005-12-11  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:
	A src/ephy-cert-manager-dialog.c:
	A src/ephy-cert-manager-dialog.h:
	R src/ephy-certificate-manager.c:
	R src/ephy-certificate-manager.h:
	* src/window-commands.c:

	Fix stupid mistake.

2005-12-11  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* data/glade/Makefile.am:
	* data/glade/certs-manager.glade:
	* data/ui/epiphany-ui.xml:
	* embed/Makefile.am:
	A embed/ephy-certificate-manager.c:
	A embed/ephy-certificate-manager.h:
	A embed/ephy-x509-cert.c:
	A embed/ephy-x509-cert.h:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	A embed/mozilla/mozilla-x509-cert.cpp:
	A embed/mozilla/mozilla-x509-cert.h:
	* src/Makefile.am:
	A src/ephy-certificate-manager.c:
	A src/ephy-certificate-manager.h:
	* src/ephy-window.c:
	* src/window-commands.c:
	* src/window-commands.h:

	Add certificate manager. Patch by Robert Marcano and Crispin
	Flowerday. Fixes bug #119090.

2005-12-08  Christian Persch  <chpe@cvs.gnome.org>
