@@ -1,3 +1,9 @@
+2005-12-16  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>
+
+	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor):
+	Use a gtk stock cursor (GDK_HAND2) instead of already removed image. 
+	Fixes bug #324265.
+
 2005-12-15  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* embed/mozilla/mozilla-embed-single: (impl_import):
